--- a/src/app/bmx/bmx-creator/survey-creation-design/survey-creation-design.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/survey-creation-design.component.html
@@ -91,11 +91,17 @@
 
                 <div class="emoji-handle">.</div>
                 <div class="test-name-table" style="margin-top: 20px;">
-                    <div style="width: 33%;text-align: center; font-size: 20px;   font-weight: bold;color: #324395;margin-left: 20px;">NAME</div>
-                    <div style="width: 33%;text-align: center; font-size: 20px;  font-weight: bold;color: #324395;margin-left: 50px;">RATIONALE</div>
-                    <div style="width: 33%;text-align: center; font-size: 20px;  font-weight: bold;color: #324395;margin-left: 20px;">RATING</div>
+                    <div
+                        style="width: 33%;text-align: center; font-size: 20px;   font-weight: bold;color: #324395;margin-left: 20px;">
+                        NAME</div>
+                    <div
+                        style="width: 33%;text-align: center; font-size: 20px;  font-weight: bold;color: #324395;margin-left: 50px;">
+                        RATIONALE</div>
+                    <div
+                        style="width: 33%;text-align: center; font-size: 20px;  font-weight: bold;color: #324395;margin-left: 20px;">
+                        RATING</div>
                 </div>
-<hr>
+                <hr>
                 <!-- UPLOAD TESTNAMES -->
                 <div *ngIf="i === selectedIndex" class="mat-elevation-z4">
                     <div style="text-align: center;">
@@ -116,15 +122,15 @@
                         <br>
                         <br>
                         <div>
-                           1 <input [(ngModel)]="rankingScaleValue" type="range" id="volume" name="volume"
-                                   min="0" max="11">  {{rankingScaleValue}}  <br>
-                            <label for="volume">from  </label>
-                          </div>
-                          <hr>
-                          <button style="outline: none;color:#76d354;margin-bottom: 50px;" mat-icon-button (click)="selectedIndex = '';"
-                          aria-label="ranking">DONE <br>
-                          <mat-icon>check_circle</mat-icon>
-                      </button>
+                            1 <input [(ngModel)]="rankingScaleValue" type="range" id="volume" name="volume" min="0"
+                                max="11"> {{rankingScaleValue}} <br>
+                            <label for="volume">from </label>
+                        </div>
+                        <hr>
+                        <button style="outline: none;color:#76d354;margin-bottom: 50px;" mat-icon-button
+                            (click)="selectedIndex = '';" aria-label="ranking">DONE <br>
+                            <mat-icon>check_circle</mat-icon>
+                        </button>
                     </div>
                 </div>
 
@@ -137,13 +143,13 @@
 
                         <div style="width: 33%;text-align: center;margin-left: 10px;">{{testName.rationale}}</div>
 
-                        <div  style="margin-left: 80px;">
-                            <button *ngFor="let star of  testName.STARS" (mouseenter)="selectStar(star.id , y)" (click)="setRating(star.id,y)"
-                            [ngClass]="star.class" style="outline: none;" mat-icon-button
-                            aria-label="ranking">
-                            <mat-icon>{{star.icon}}</mat-icon>
-                        </button>
-                        </div>                       
+                        <div style="margin-left: 80px;">
+                            <button *ngFor="let star of  testName.STARS" (mouseenter)="selectStar(star.id , y)"
+                                (click)="setRating(star.id,y)" [ngClass]="star.class" style="outline: none;"
+                                mat-icon-button aria-label="ranking">
+                                <mat-icon>{{star.icon}}</mat-icon>
+                            </button>
+                        </div>
                     </div>
                 </div>
                 <button *ngIf="i === selectedIndex" class="cancel" (click)="selectedIndex = '';" mat-icon-button>
@@ -170,7 +176,8 @@
             <button (click)="createNewBmxComponent()" mat-icon-button matTooltip="Add Intro" matTooltipPosition="right">
                 <mat-icon class="full-icon">note_add</mat-icon>
             </button>
-            <button (click)="createRankingComponent()" matTooltip="TEST NAMES" matTooltipPosition="right" mat-icon-button color="warn" aria-label="aria">
+            <button (click)="createRankingComponent()" matTooltip="TEST NAMES" matTooltipPosition="right"
+                mat-icon-button color="warn" aria-label="aria">
                 <mat-icon class="full-icon">grading</mat-icon>
             </button>
             <button matTooltip="SCALE" matTooltipPosition="right" mat-icon-button color="warn" aria-label="aria">
