--- a/src/app/restaurant/restaurant.component.html
+++ b/src/app/restaurant/restaurant.component.html
@@ -1,20 +1,34 @@
 <div class="mainContainer disable-dbl-tap-zoom">
 
-    <div class="logo-miami" >
-        <!-- <img class="logo" src="./assets/img/food/payment.JPG"> -->
-        <p style="animation: swing 200ms ease-in-out 100ms forwards">MIAMI LUXURY</p><br>
-        <p style="color: rgb(255, 55, 255);animation: swing 200ms ease-in-out 100ms forwards">RIDES</p>
+    <div class="logo-miami">
+        <img class="logo" src="./assets/img/elite/logo.png">
+        <p style="animation: swing 200ms ease-in-out 100ms forwards; padding-top: 20px;">ELITE</p><br>
+        <!-- <p style="color: rgb(255, 55, 255);animation: swing 200ms ease-in-out 100ms forwards">RIDES</p> -->
         <!-- <p style="color: grey;">table i#: {{tableNo}}</p> -->
     </div>
 
+    <!-- RECRUTER -->
+   
+    <!-- <div class="menu" style="margin-top: 50px;">
+
+        <div class="foodCard" *ngFor="let item of food; index as i" style="color: white;">
+
+            <img class="pizzaImage" style="width: 90%;margin-top: 50px;" [src]="item.imgSrc">
+            <h1 class="title secondary-text" style="padding-top: 10px;">{{item.name}}</h1>
+            <div class="title secondary-text" style="width: 290px;text-align: center;">{{item.description}}</div>  -->
+    <!-- END RECRUTER -->
+
+    <!-- PROMOTER -->
     <div class="menu">
 
         <div class="foodCard" *ngFor="let item of food; index as i" style="color: white;">
 
-            <img class="pizzaImage" style="width: 106%;" [src]="item.imgSrc">
+            <img class="pizzaImage" style="width: 100%;" [src]="item.imgSrc">
             <h1 class="title secondary-text" style="padding-top: 10px;">{{item.name}}</h1>
-            <div class="title secondary-text" style="width: 290px;text-align: center;">{{item.description}}</div>
+    <!-- <div class="title secondary-text" style="width: 290px;text-align: center;">{{item.description}}</div> -->
 
+    <!-- END PROMOTER -->
+    <!-- 
             <div class="column">
 
                 <div class="column" style="align-items: center;">
@@ -47,111 +61,110 @@
 
                     </div>
                 </div>
-                <!-- <div class="row">
+                <div class="row">
                     Speacial Instructions &nbsp; &nbsp; <input [(ngModel)]="item.specialIntructions" matInput placeholder="Ex. Pizza" type="text">
-                </div> -->
-            </div>
-        </div>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-    </div>
+                </div>
+            </div> -->
+</div>
+<br>
+<br>
+<br>
+<br>
+<br>
+</div>
 
 
 
 
-    <div class="footer">
+<div class="footer">
 
-        <button mat-mini-fab color="warn"
+    <!-- <button mat-mini-fab color="warn"
             style="color: white;outline: none;position: absolute;bottom: 19px; left: 80px;background-color: goldenrod;">
             <mat-icon style="line-height: 18px;" (click)="qrcode()">qr_code</mat-icon>
-        </button>
-        <button mat-mini-fab color="primary" style="color: white;
+        </button> -->
+    <button mat-mini-fab color="primary" style="color: white;
         background-color: black;
         font-size: 6px;
         bottom: 30px;
         width: 60px;
-        height: 60px;" (click)="checkout()">
-            <mat-icon>attach_money</mat-icon>
-        </button>
-        <button mat-mini-fab
+        height: 60px;" (click)="qrcode()">
+        <mat-icon>qr_code</mat-icon>
+    </button>
+    <!-- <button mat-mini-fab
             style="background-color: goldenrod; color: white;outline: none;position: absolute;bottom: 19px; right: 80px;">
             <a style="color: white;" href="tel:3053220070">
                 <mat-icon>phone</mat-icon>
             </a>
-        </button>
+        </button> -->
 
-    </div>
+</div>
 
-    <!-- MODAL WINDOWS -->
+<!-- MODAL WINDOWS -->
 
-    <div *ngIf="popUpToppings" class="formFieldValidationAlert"
-        style="display: flex;flex-direction: column; align-items: center; justify-content: center;text-align: center; max-width: 300px;">
-        <h1>Please add toppings</h1>
-        <div class="column">
-            <div class="even" *ngFor=" let item  of foodToppings.toppings ; index as i">
-                <mat-checkbox [(ngModel)]="item.completed" (ngModelChange)="confirm()">
-                    {{item.name}} &nbsp; &nbsp; ${{item.price}}
-                </mat-checkbox>
-            </div>
-        </div>
-
-        <div class="rowPopup">
-            <button mat-raised-button color="accent" style="margin-right: 5px; color: white;"
-                (click)="dismissErrorForm()">cancel</button>
-            <button mat-raised-button color="primary" style="color: white;"
-                (click)="dismissErrorForm()">confirm</button>
+<div *ngIf="popUpToppings" class="formFieldValidationAlert"
+    style="display: flex;flex-direction: column; align-items: center; justify-content: center;text-align: center; max-width: 300px;">
+    <h1>Please add toppings</h1>
+    <div class="column">
+        <div class="even" *ngFor=" let item  of foodToppings.toppings ; index as i">
+            <mat-checkbox [(ngModel)]="item.completed" (ngModelChange)="confirm()">
+                {{item.name}} &nbsp; &nbsp; ${{item.price}}
+            </mat-checkbox>
         </div>
     </div>
 
-    <!-- MODAL OPTIONS -->
+    <div class="rowPopup">
+        <button mat-raised-button color="accent" style="margin-right: 5px; color: white;"
+            (click)="dismissErrorForm()">cancel</button>
+        <button mat-raised-button color="primary" style="color: white;" (click)="dismissErrorForm()">confirm</button>
+    </div>
+</div>
 
-    <div *ngIf="popUpOptions" class="formFieldValidationAlert">
-        <h2>Please select a payment option</h2>
-        <!-- <mat-radio-group class="column" [(ngModel)]="selectedOption"
+<!-- MODAL OPTIONS -->
+
+<div *ngIf="popUpOptions" class="formFieldValidationAlert">
+    <h2>Please select a payment option</h2>
+    <!-- <mat-radio-group class="column" [(ngModel)]="selectedOption"
             *ngFor=" let item  of foodOptions.options ; index as i">
             <mat-radio-button [value]="item.name">
                 {{item.name}}
             </mat-radio-button>
         </mat-radio-group> -->
-        <p>Cash App</p>
-         <img class="logo" style="width: 150px;" src="./assets/img/food/cashApp.jpg"><br>
-         <p>Zelle</p>
-         <img class="logo" style="width: 150px;" src="./assets/img/food/zelle.png">
-         <p>cesarvega.col@gmail.com</p>
-        <div class="rowPopup" style="display: flex;flex-direction: column;gap: 10px;align-items: center;">
-           
-            <button mat-raised-button color="primary" style="color: white;" (click)="crypto()">CRYPTO</button> 
-                
-                <button mat-raised-button color="accent" style="margin-right: 5px; color: white;"
-                (click)="dismissErrorForm()">CANCEL</button>
-        </div>
-    </div>
+    <p>Cash App</p>
+    <img class="logo" style="width: 150px;" src="./assets/img/food/cashApp.jpg"><br>
+    <p>Zelle</p>
+    <img class="logo" style="width: 150px;" src="./assets/img/food/zelle.png">
+    <p>cesarvega.col@gmail.com</p>
+    <div class="rowPopup" style="display: flex;flex-direction: column;gap: 10px;align-items: center;">
 
-    <!-- MODAL REVIEW -->
-    <div *ngIf="popUpQRCode" class="formFieldValidationAlert">
-        <h1>Screenshot & Share</h1>
-        <qrcode [qrdata]="myAngularxQrCode" [width]="140" [errorCorrectionLevel]="'M'"></qrcode>
-        <p><a style="color: black;" target="_blank">{{myAngularxQrCode}}</a></p>
-        <button mat-mini-fab color="primary"
-            style="color:white;background-color: green;font-size: 6px;margin-bottom: 10px;"
-            (click)="dismissErrorForm()">
-            <mat-icon>check</mat-icon>
-        </button>
+        <button mat-raised-button color="primary" style="color: white;" (click)="crypto()">CRYPTO</button>
+
+        <button mat-raised-button color="accent" style="margin-right: 5px; color: white;"
+            (click)="dismissErrorForm()">CANCEL</button>
     </div>
+</div>
+
+<!-- MODAL REVIEW -->
+<div *ngIf="popUpQRCode" class="formFieldValidationAlert" style="background: black;border: black 1px solid;">
+    <h1 style="color: white;">Share to Recruit</h1>
+    <!-- <qrcode [qrdata]="myAngularxQrCode" [width]="140" [errorCorrectionLevel]="'M'"></qrcode> -->
+    <img class="logo" style="width: 200px;" src="./assets/img/elite/RECRUTER.jpg">
+    <p><a style="color: rgb(255, 255, 255);" target="_blank">{{myAngularxQrCode}}</a></p>
+    <button mat-mini-fab color="primary" style="color:white;background-color: green;font-size: 6px;margin-bottom: 10px;"
+        (click)="dismissErrorForm()">
+        <mat-icon>check</mat-icon>
+    </button>
+</div>
 
 
-    <div *ngIf="popUpThankyou" class="reviewOrderClass  disable-dbl-tap-zoom">
-        <h2>WE ACCEPT CRYPTO PAYMENTS</h2>
-        <img class="logo" style="width: 280px;" src="./assets/img/food/payment.JPG">
-        <button mat-mini-fab color="primary" style="color:white;background-color: green;font-size: 6px;"
-            (click)="thankYou()">
-            <mat-icon>check</mat-icon>
-        </button>
-        <br>
-    </div>
+<div *ngIf="popUpThankyou" class="reviewOrderClass  disable-dbl-tap-zoom">
+    <h2>WE ACCEPT CRYPTO PAYMENTS</h2>
+    <img class="logo" style="width: 280px;" src="./assets/img/food/payment.JPG">
+    <button mat-mini-fab color="primary" style="color:white;background-color: green;font-size: 6px;"
+        (click)="thankYou()">
+        <mat-icon>check</mat-icon>
+    </button>
+    <br>
+</div>
 
 </div>
 
