--- a/src/app/restaurant/restaurant.component.scss
+++ b/src/app/restaurant/restaurant.component.scss
@@ -118,7 +118,7 @@
         .foodCard {
             display: flex;
             flex-direction: column;
-            border: goldenrod solid 1px;
+            border: rgb(255, 255, 255) solid 1px;
             border-radius: 5px;
             justify-content: space-between;
             align-items: center;
@@ -207,15 +207,16 @@
         justify-content: space-between;
         height: 100vh;
         overflow: hidden;
-        background-color: rgb(0 0 0 / 88%);
+        background-color:black;
         color: rgb(0, 0, 0);
 
         .logo-miami {
-            font-size: 30px;
+            font-size: 20px;
             display: flex;
+            margin-bottom: 10px;
             flex-direction: column;
             align-items: center;
-            color: aqua;
+            color: rgb(255, 255, 255);
             font-family: Miami;
             padding-top: 20px;
             background-color: black;
@@ -225,7 +226,8 @@
         }
 
         .logo {
-            width: 80px;
+            width: 62px;
+            margin-top: 10px;
         }
 
         .header {
@@ -250,7 +252,7 @@
             align-items: center;
             position: fixed;
             bottom: 0px;
-            background-color: #9e6f00;
+            background-color: #000000;
             z-index: 1;
             // border-top: 3px solid #004684;
         }
@@ -271,12 +273,15 @@
             overflow-y: scroll;
             position: absolute;
             top: 146px;
+            background-color: black;
+            
+
         }
 
         .foodCard {
             display: flex;
             flex-direction: column;
-            border: goldenrod solid 1px;
+            border: rgb(255, 255, 255) solid 1px;
             border-radius: 5px;
             justify-content: space-between;
             align-items: center;
@@ -321,7 +326,7 @@
         }
 
         .pizzaImage:hover {
-            transform: scale(1.1);
+            // transform: scale(1.1);
         }
     }
     .formFieldValidationAlert {
