rating scale template dynamic columns in progress

--- a/src/app/bmx/bmx-creator/bmx-creator.component.scss
+++ b/src/app/bmx/bmx-creator/bmx-creator.component.scss
@@ -159,7 +159,7 @@
             margin: 10px;
             right: 0px;
             z-index: 999999;
-            bottom: -13px;
+            top: 477px;
         }
         .save {
             outline: none;
