--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.scss
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.scss
@@ -1,8 +1,13 @@
-
-
-.active-rating-star{
-    color:#76d354;
+.active-rating-star {
+    color: #76d354;
 }
-.rating-star{
-    color:grey;
+.rating-star {
+    color: grey;
 }
+
+// .odd-style:first-child {
+//     background: #ff0;
+// }
+// .odd-style:nth-child(even) {
+//     background: #ccc;
+// }
