--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.html
@@ -1,15 +1,19 @@
-<div class="test-name-table" style="margin-top: 20px;border-bottom: solid 1px grey;height: 30px;">
-    <div
-        style="width: 33%;text-align: center; font-size: 20px;   font-weight: bold;color: #324395;margin-left: 20px;">
+<!-- <div class="test-name-table" style="margin-top: 20px;border-bottom: solid 1px grey;height: 30px;">
+    <div style="width: 33%;text-align: center; font-size: 20px;   font-weight: bold;color: #324395;margin-left: 20px;">
         NAME</div>
-    <div
-        style="width: 33%;text-align: center; font-size: 20px;  font-weight: bold;color: #324395;margin-left: 50px;">
+    <div style="width: 33%;text-align: center; font-size: 20px;  font-weight: bold;color: #324395;margin-left: 50px;">
         RATIONALE</div>
-    <div
-        style="width: 33%;text-align: center; font-size: 20px;  font-weight: bold;color: #324395;margin-left: 20px;">
+    <div style="width: 33%;text-align: center; font-size: 20px;  font-weight: bold;color: #324395;margin-left: 20px;">
         RATING</div>
+
+        <div *ngFor="let columnName of columnsNamesHeader" style="width: 33%;text-align: center;margin-left: 10px;">
+
+            <div >{{columnName}}</div>
+
+        </div>
+
 </div>
-<hr>
+<hr> -->
 
 <!-- CONFIG BOX -->
 <div *ngIf="i === selectedIndex" class="mat-elevation-z4">
@@ -31,8 +35,8 @@
         <br>
         <br>
         <div>
-            1 <input [(ngModel)]="rankingScaleValue" type="range" id="volume" name="volume" min="0"
-                max="11"> {{rankingScaleValue}} <br>
+            1 <input [(ngModel)]="rankingScaleValue" type="range" id="volume" name="volume" min="0" max="11">
+            {{rankingScaleValue}} <br>
             <label for="volume">from </label>
         </div>
         <hr>
@@ -45,19 +49,22 @@
 
 
 <!-- RATING TABLE -->
-<div class="odd-style" *ngFor="let testName of bmxItem.componentText; let y = index" style="margin:10px 10px;">
+<div class="odd-style" *ngFor="let testName of bmxItem.componentText; let y = index">
     <div class="test-name-table">
-
-        <div style="width: 33%;text-align: center;margin-left: 10px;">{{testName.name}}</div>
-
-
-        <div style="width: 33%;text-align: center;margin-left: 10px;">{{testName.rationale}}</div>
-
-        <div style="margin-left: 140px;">
-            <button *ngFor="let star of  testName.STARS" (mouseenter)="selectStar(star.id , y)" (mouseleave)="selectStar(star.id , y)"
-                (click)="setRating(star.id,y)" [ngClass]="star.class" style="outline: none;margin:-5px -10px;"
-                mat-icon-button aria-label="ranking">
-                <mat-icon>{{star.icon}}</mat-icon>
+        <div *ngFor="let columnName of columnsNames" style="width: 33%;text-align: start;margin:10px 10px;">
+            <div>{{testName[columnName]}}</div>
+        </div>
+        <div style="min-width: 500px">
+            <button *ngFor="let star of  testName.STARS; let x =  index" (click)="setRating(star.id,y)" [ngClass]="star.class"
+                (mouseenter)="selectStar(star.id , y)" (mouseleave)="selectStar(star.id , y)"
+                style="outline: none;margin:-5px -8px;" mat-icon-button aria-label="ranking">
+                <mat-icon *ngIf="(y !== 0)" style="transform: rotate(0deg);">{{'crop_din'}}</mat-icon>
+                <div class="rating-text"  *ngIf="(y === 0 && x === 0)"  >RATING</div>
+            </button>
+        </div>
+        <div style="min-width: 100px" >
+            <button *ngIf="(y !== 0)" style="outline: none;margin:-5px -8px;" (click)="deletPart(y)" mat-icon-button aria-label="ranking">
+                <mat-icon >delete_outline</mat-icon>               
             </button>
         </div>
     </div>
