--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.scss
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.scss
@@ -5,9 +5,22 @@
     color: grey;
 }
 
-// .odd-style:first-child {
-//     background: #ff0;
-// }
+.odd-style:first-child {
+    font-size: 20px;
+    font-weight: bold;
+    color: #324395;
+    margin-bottom: 20px;
+}
 // .odd-style:nth-child(even) {
 //     background: #ccc;
 // }
+
+.rating-text {
+    width: 33%;
+    text-align: start;
+    margin: 10px 10px;
+    font-size: 20px;
+    font-weight: bold;
+    color: #324395;
+    margin-bottom: 20px;
+}
