--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.html
@@ -52,7 +52,8 @@
 <div class="odd-style" *ngFor="let testName of bmxItem.componentText; let y = index">
     <div class="test-name-table">
         <div *ngFor="let columnName of columnsNames" style="width: 33%;text-align: start;margin:10px 10px;">
-            <div>{{testName[columnName]}}</div>
+            <div *ngIf="(y === 0)">{{testName[columnName]}}</div>
+            <input *ngIf="(y !== 0)" [(ngModel)]="testName[columnName]" style="border: none;" value="testName[columnName]">
         </div>
         <div style="min-width: 250px">
             <button *ngFor="let star of  testName.STARS; let x =  index" (click)="setRating(star.id,y)" [ngClass]="star.class"
