--- a/src/app/elite/elite.component.scss
+++ b/src/app/elite/elite.component.scss
@@ -92,7 +92,7 @@
             align-items: center;
             position: fixed;
             bottom: 0px;
-            background-color: #9e6f00;
+            background-color: #000;
             z-index: 1;
             border: 1px solid #004684;
         }
@@ -112,7 +112,7 @@
             overflow-x: hidden;
             overflow-y: scroll;
             position: absolute;
-            top: 110px;
+            top: 180px;
         }
 
         .foodCard {
@@ -207,7 +207,7 @@
         justify-content: space-between;
         height: 100vh;
         overflow: hidden;
-        background-color:black;
+        background-color: rgb(0 0 0 / 88%);
         color: rgb(0, 0, 0);
 
         .logo-miami {
@@ -273,9 +273,7 @@
             overflow-y: scroll;
             position: absolute;
             top: 146px;
-            background-color: black;
-            
-
+            background-color: rgb(0 0 0 / 88%);
         }
 
         .foodCard {
@@ -322,6 +320,7 @@
         .pizzaImage {
             transition: all 0.2s ease-in-out;
             animation: fadeIn 1 ease-in 0 forwards 1;
+            background-color: rgb(0 0 0 / 88%);
             @include BoxShadow(12);
         }
 
