--- a/src/app/bmx/bmx-creator/participants-email/participants-email.component.html
+++ b/src/app/bmx/bmx-creator/participants-email/participants-email.component.html
@@ -1,100 +1,175 @@
-<h2 style="margin: 20px;">Project TEST BrandMatrix Setup</h2>
-<!-- HEADER INPUTS -->
-<div style="display: flex;flex-direction: row;justify-content: space-evenly;">
-
-    <div>
-        <div style="margin: 20px;font-size: 20px;color:#063074;font-weight: 800;">Email Settings</div>
-
-        <div style="margin-left: 20px;font-size: 15px;color:grey;font-weight: 100;">Send Director Confirmation
-            Emails
-        </div>
-        <div style="margin-left: 20px;font-size: 15px;color:grey;font-weight: 100;">Send Department Confirmation
-            Emails
-        </div>
-    </div>
-
-
-    <div style="display: flex;flex-direction: column;">
+<div style="width: 100%; display: flex; align-items: flex-start;">
+    <div style="border: hotpink solid 0px; width: 60%;">
+        <h2 style="margin: 20px;">Project TEST BrandMatrix Setup</h2>
+        <!-- HEADER INPUTS -->
         <div style="display: flex;flex-direction: row;justify-content: space-evenly;">
 
-            <div style="display: flex;justify-content: space-around;">
-                <div>
-                    <div style="margin: 20px;font-size: 20px;color:#063074;font-weight: 800;">Templates</div>
-                    <mat-form-field appearance="outline" style="margin-left: 20px;">
-                        <mat-label>Choose Template</mat-label>
-                        <mat-select class="selectLabels">
-                            <mat-option *ngFor="let EMAIL_TEMPLATE of EMAIL_TEMPLATES" [value]="EMAIL_TEMPLATE">
-                                {{EMAIL_TEMPLATE.name}}
-                            </mat-option>
-                        </mat-select>
-                    </mat-form-field>
+            <div>
+                <div style="margin: 20px;font-size: 20px;color:#063074;font-weight: 800;">Email Settings</div>
+
+                <div style="margin-left: 20px;font-size: 15px;color:grey;font-weight: 100;">Send Director Confirmation
+                    Emails
                 </div>
-                <div>
-                    <div style="margin: 20px;font-size: 20px;color:#063074;font-weight: 800;">Link Type</div>
-                    <mat-form-field appearance="outline" style="margin-left: 20px;">
-                        <mat-label>Direct Link</mat-label>
-                        <mat-select class="selectLabels">
-                            <mat-option *ngFor="let link of LINK_TYPE" [value]="link">
-                                {{link.name}}
-                            </mat-option>
-                        </mat-select>
-                    </mat-form-field>
-                    <button mat-raised-button
-                        style="background-color: #003180;color:white;margin: 10px 20px 0 20px;height: 38px;">
-                        Load Text
-                    </button>
+                <div style="margin-left: 20px;font-size: 15px;color:grey;font-weight: 100;">Send Department Confirmation
+                    Emails
+                </div>
+            </div>
+
+
+            <div style="display: flex;flex-direction: column;">
+                <div style="display: flex;flex-direction: row;justify-content: space-evenly;">
+
+                    <div style="display: flex;justify-content: space-around;">
+                        <div>
+                            <div style="margin: 20px;font-size: 20px;color:#063074;font-weight: 800;">Templates</div>
+                            <mat-form-field appearance="outline" style="margin-left: 20px;">
+                                <mat-label>Choose Template</mat-label>
+                                <mat-select class="selectLabels">
+                                    <mat-option *ngFor="let EMAIL_TEMPLATE of EMAIL_TEMPLATES" [value]="EMAIL_TEMPLATE">
+                                        {{EMAIL_TEMPLATE.name}}
+                                    </mat-option>
+                                </mat-select>
+                            </mat-form-field>
+                        </div>
+                        <div>
+                            <div style="margin: 20px;font-size: 20px;color:#063074;font-weight: 800;">Link Type</div>
+                            <mat-form-field appearance="outline" style="margin-left: 20px;">
+                                <mat-label>Direct Link</mat-label>
+                                <mat-select class="selectLabels">
+                                    <mat-option *ngFor="let link of LINK_TYPE" [value]="link">
+                                        {{link.name}}
+                                    </mat-option>
+                                </mat-select>
+                            </mat-form-field>
+                            <button mat-raised-button
+                                style="background-color: #003180;color:white;margin: 10px 20px 0 20px;height: 38px;">
+                                Load Text
+                            </button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-</div>
 
-<!-- EMAIL EDITOR FORM -->
-<div style="margin-left: 20px;">
-    <div style="margin-bottom: 20px;font-size: 20px;color:#063074;font-weight: 800;">Send Invite</div>
-    <div style="display: flex;flex-direction: row;margin-bottom: 20px; justify-content: space-between;">
-        <div style="color:#063074;font-size: 20px;margin-right: 20px;">From :</div>
-        <input style="width: 458px;" mat-input type="text" placeholder="director@brandinstitute.com">
-    </div>
-    <div style="display: flex;flex-direction: row;margin-bottom: 20px;justify-content: space-between;">
-        <div style="color:#063074;font-size: 20px;margin-right: 20px;">CC :</div>
-        <input style="width: 458px;" mat-input type="text" placeholder="CC">
-    </div>
-    <div style="display: flex;flex-direction: row;margin-bottom: 20px;justify-content: space-between;">
-        <div style="color:#063074;font-size: 20px;margin-right: 20px;">BCC :</div>
-        <input style="width: 458px;" mat-input type="text"
-            placeholder="creative@brandinstitue.com,director1@brandinstitue.com,direct...">
-    </div>
-    <div style="display: flex;flex-direction: row;margin-bottom: 20px;justify-content: space-between;">
-        <div style="color:#063074;font-size: 20px;margin-right: 20px;">Subject :</div>
-        <input style="width: 458px;" mat-input type="text" placeholder="Subject">
-    </div>
+        <!-- EMAIL EDITOR FORM -->
+        <div style="margin-left: 20px;">
+            <div style="margin-bottom: 20px;font-size: 20px;color:#063074;font-weight: 800;">Send Invite</div>
+            <div style="display: flex;flex-direction: row;margin-bottom: 20px; justify-content: space-between; ">
+                <div style="color:#063074;font-size: 20px;margin-right: 20px;">From :</div>
+                <input style="width: 458px;" mat-input type="text" placeholder="director@brandinstitute.com">
+            </div>
+            <div style="display: flex;flex-direction: row;margin-bottom: 20px;justify-content: space-between;">
+                <div style="color:#063074;font-size: 20px;margin-right: 20px;">CC :</div>
+                <input style="width: 458px;" mat-input type="text" placeholder="CC">
+            </div>
+            <div style="display: flex;flex-direction: row;margin-bottom: 20px;justify-content: space-between;">
+                <div style="color:#063074;font-size: 20px;margin-right: 20px;">BCC :</div>
+                <input style="width: 458px;" mat-input type="text"
+                    placeholder="creative@brandinstitue.com,director1@brandinstitue.com,direct...">
+            </div>
+            <div style="display: flex;flex-direction: row;margin-bottom: 20px;justify-content: space-between;">
+                <div style="color:#063074;font-size: 20px;margin-right: 20px;">Subject :</div>
+                <input style="width: 458px;" mat-input type="text" placeholder="Subject">
+            </div>
 
-    <div style="display: flex;flex-direction: row;">
-        <mat-icon style="color: #003180;font-size: 25px;">attach_file</mat-icon>
-        <div style="color: grey;">{{'attachments'}}</div>
-        <button mat-raised-button style="background-color: #003180;color:white;margin: -7px 0px 0 12px;">
-            Choose File(s)
-        </button>
-    </div>
-    <div style="width: 100%;margin-top: 20px;">
-        <!-- CKEDITOR -->
-        <div>
-            <!-- <div style="margin: 30px;" [innerHTML]="brandMatrixObjects[1].componentText | safe: 'html'"></div> -->
-            <ckeditor id="txtTexto" style="animation: fadeIn 0.5s ease forwards;"
-                [ngModelOptions]="{standalone: true}" [(ngModel)]="brandMatrixObjects[1].componentText"
-                [data]="brandMatrixObjects[1].componentText" [config]="ckconfig">
-            </ckeditor>
-            <div style="display: flex;justify-content: flex-end;">
-                <button mat-raised-button style="background-color: #003180;color:white;margin:20px">
-                    Send Invite
-                </button>
-                <button mat-raised-button style="background-color: #003180;color:white;margin:20px 0px">
-                    Preview Invite
+            <div style="display: flex;flex-direction: row;">
+                <mat-icon style="color: #003180;font-size: 25px;">attach_file</mat-icon>
+                <div style="color: grey;">{{'attachments'}}</div>
+                <button mat-raised-button style="background-color: #003180;color:white;margin: -7px 0px 0 12px;">
+                    Choose File(s)
                 </button>
             </div>
+            <div style="width: 100%;margin-top: 20px;">
+                <!-- CKEDITOR -->
+                <div>
+                    <!-- <div style="margin: 30px;" [innerHTML]="brandMatrixObjects[1].componentText | safe: 'html'"></div> -->
+                    <ckeditor id="txtTexto" style="animation: fadeIn 0.5s ease forwards;"
+                        [ngModelOptions]="{standalone: true}" [(ngModel)]="brandMatrixObjects[1].componentText"
+                        [data]="brandMatrixObjects[1].componentText" [config]="ckconfig">
+                    </ckeditor>
+                    <div style="display: flex;justify-content: flex-end;">
+                        <button mat-raised-button style="background-color: #003180;color:white;margin:20px">
+                            Send Invite
+                        </button>
+                        <button mat-raised-button style="background-color: #003180;color:white;margin:20px 0px">
+                            Preview Invite
+                        </button>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+    </div>
+    <div style="border: hotpink solid 0px; width: 35%; padding-left: 5%;">
+        <div style="display: flex;flex-direction: row;margin-bottom: 20px; justify-content: space-between; ">
+            <div style="color:#063074;font-size: 20px;margin-right: 20px;">To :</div>
+        </div>
+        <mat-form-field appearance="outline" style="width: 100%;">
+            <textarea matInput rows="4" cols="50" placeholder="Recipients">{{to}}</textarea>
+        </mat-form-field>
+        <div style="display: block;width: 100%; max-height: 500px; overflow: auto;">
+            <mat-form-field appearance="outline" style="border-radius: 0px">
+                <mat-label>Sort By</mat-label>
+                <mat-select [(value)]="selected" (selectionChange)="changeView()">
+                    <mat-option value="All">All</mat-option>
+                    <mat-option value="NS">Not Started</mat-option>
+                    <mat-option value="NF">Not Finished</mat-option>
+                    <mat-option value="F">Finished</mat-option>
+                </mat-select>
+            </mat-form-field>
+            <table mat-table [dataSource]="dataSource" class="mat-elevation-z8"
+                style="width: 100%; margin-bottom: 20px; overflow-y: auto;">
+
+                <!-- Checkbox Column -->
+                <ng-container matColumnDef="select">
+                    <th mat-header-cell *matHeaderCellDef>
+                        <mat-checkbox (change)="$event ? masterToggle() : null"
+                            [checked]="selection.hasValue() && isAllSelected()"
+                            [indeterminate]="selection.hasValue() && !isAllSelected()">
+                        </mat-checkbox>
+                    </th>
+                    <td mat-cell *matCellDef="let row">
+                        <mat-checkbox (click)="$event.stopPropagation()"
+                            (change)="$event ? selection.toggle(row) : null"
+                            (change)="$event ? selectRow($event, row) : null" [checked]="selection.isSelected(row)">
+                        </mat-checkbox>
+                    </td>
+                </ng-container>
+
+                <ng-container matColumnDef="firstName">
+                    <th mat-header-cell *matHeaderCellDef> First Name </th>
+                    <td mat-cell *matCellDef="let element"> {{element.firstName}} </td>
+                </ng-container>
+
+                <ng-container matColumnDef="lastName">
+                    <th mat-header-cell *matHeaderCellDef> Last Name </th>
+                    <td mat-cell *matCellDef="let element"> {{element.lastName}} </td>
+                </ng-container>
+
+                <ng-container matColumnDef="group">
+                    <th mat-header-cell *matHeaderCellDef> Group </th>
+                    <td mat-cell *matCellDef="let element"> {{element.group}} </td>
+                </ng-container>
+
+                <ng-container matColumnDef="subGroup">
+                    <th mat-header-cell *matHeaderCellDef> Subgroup </th>
+                    <td mat-cell *matCellDef="let element"> {{element.subGroup}} </td>
+                </ng-container>
+
+                <ng-container matColumnDef="status">
+                    <th mat-header-cell *matHeaderCellDef> Status </th>
+                    <td mat-cell *matCellDef="let element"> {{element.status}} </td>
+                </ng-container>
+
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;">
+                </tr>
+            </table>
+            
+
         </div>
     </div>
 
-</div>
 
+</div>
